syntax = "proto3";

// 定义包名
package greeter;

option go_package = "./;greeter";

// 定义Greeter服务
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// 定义HelloRequest消息
message HelloRequest {
  string name = 1;
}

// 定义HelloReply消息
message HelloReply {
  string message = 1;
}